--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,20 @@ footer p {
     margin: 0;
     color: white;
 }
+
+.logo {
+    display: block;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+main > div {
+    display: none;
+}
+
+main > div:target {
+    display: block;
+}
