--- a/styles.css
+++ b/styles.css
@@ -1,103 +1,92 @@
+/* Styles pour la page */
 body {
-    background-color: #2b2b2b;
-    color: #ffffff;
     font-family: Arial, sans-serif;
+    line-height: 1.6;
     margin: 0;
     padding: 0;
+    background-color: #1a1a1a;
+    color: #fff;
 }
 
 header {
-    text-align: center;
+    background-color: #000;
     padding: 20px;
-    background-color: #333;
+    text-align: center;
 }
 
-header h1 {
+h1 {
     margin: 0;
-    font-size: 32px;
-    color: #ffcc00;
+    font-size: 30px;
+    color: #fff;
+}
+
+h1 a {
+    text-decoration: none;
+    color: #ffd1dc; /* Rose poudré */
+}
+
+h1 a:hover {
+    color: #ff69b4; /* Rose pâle au survol */
 }
 
 nav {
-    background-color: #333;
+    background-color: #000;
     padding: 10px;
+    text-align: center;
 }
 
 nav ul {
     list-style: none;
-    margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
+    margin: 0;
 }
 
-nav li {
-    margin: 0 15px;
+nav ul li {
+    display: inline;
+    margin-right: 20px;
 }
 
-nav a {
+nav ul li a {
     text-decoration: none;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    transition: color 0.3s ease;
+    color: #fff;
 }
 
-nav a:hover {
-    color: #ffcc00;
+nav ul li a:hover {
+    color: #ffd1dc; /* Rose poudré au survol */
 }
 
 main {
-    padding: 20px;
+    text-align: center;
+    padding: 40px;
 }
 
 .profile {
-    text-align: center;
-    padding: 20px;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 .profile img {
+    width: 100%;
+    max-width: 300px;
     border-radius: 50%;
-    max-width: 200px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.profile h2 {
-    font-size: 28px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-    color: #ffcc00;
-}
-
-.profile p {
-    font-size: 16px;
-    line-height: 1.6;
+    display: block;
+    margin: 0 auto 20px;
 }
 
 footer {
+    background-color: #000;
+    padding: 20px;
     text-align: center;
-    background-color: #333;
+}
+
+.mp3-player {
+    /* Styles pour le lecteur MP3 */
+    text-align: center;
+    margin-bottom: 10px;
+    background-color: #333; /* Couleur sombre */
     padding: 10px;
 }
 
-footer p {
-    margin: 0;
-    color: white;
-}
-
-.logo {
-    display: block;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
-
-main > div {
-    display: none;
-}
-
-main > div:target {
-    display: block;
+.mp3-player audio {
+    width: 200px; /* Taille plus petite */
 }
