--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,14 @@ footer {
     margin: 0 auto; /* Centrer horizontalement */
     padding: 20px;
 }
+
+/* Ajouter ces styles pour centrer les titres */
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+/* Ajouter un espace entre la présentation et le titre de la wishlist */
+.presentation h2 {
+    margin-top: 40px;
+}
